--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,5 @@
+@use "./styles/reset";
+@use "./styles/variables";
+@use "./styles/theme";
+@use "./styles/utils";
 /* You can add global styles to this file, and also import other style files */
