--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,18 +1,49 @@
 body {
   font-family: var(--font-family);
   font-optical-sizing: auto;
+  color: var(--text-color);
 }
 
-.mb-20 {
-  margin-bottom: 20px;
+.card {
+  padding: 24px;
+  border-radius: var(--radius);
+  border: var(--border);
 }
 
-.px-12 {
-  padding-right: 12px;
-  padding-left: 12px;
+.radius {
+  border-radius: var(--radius);
 }
 
-.py-6 {
-  padding-top: 6px;
-  padding-bottom: 6px;
+.active-item {
+  background-color: var(--light);
+  color: white;
+  border-radius: var(--radius);
+}
+
+.text-primary {
+  color: var(--primary);
+}
+
+.btn {
+  font-weight: 500;
+  border: 0;
+  cursor: pointer;
+  border-radius: var(--radius);
+  padding: 8px 16px;
+  transition: background-color 0.4s;
+}
+
+.btn-primary {
+  background-color: var(--primary);
+  color: white;
+}
+
+.btn-primary:hover {
+  background-color: var(--dark);
+}
+
+input {
+  border: var(--border);
+  border-radius: 6px;
+  padding: 12px;
 }
