--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -10,6 +10,12 @@
   flex-direction: column;
 }
 
+.xs-flex-col {
+  @media screen and (max-width: 820px) {
+    flex-direction: column;
+  }
+}
+
 .flex-auto {
   flex: 1 1 auto;
 }
@@ -63,63 +69,34 @@
 .w-half {
   width: 50%;
 }
-.mb-20 {
-  margin-bottom: 20px;
+
+.w-full {
+  width: 100%;
 }
 
-.px-12 {
-  padding-right: 12px;
-  padding-left: 12px;
+.xs-w-full {
+  @media screen and (max-width: 820px) {
+    width: 100%;
+  }
 }
 
-.py-6 {
-  padding-top: 6px;
-  padding-bottom: 6px;
-}
-.flex {
-  display: flex;
+.xs-hide {
+  @media screen and (max-width: 820px) {
+    display: none;
+  }
 }
 
-.flex-row {
-  flex-direction: row;
+.hide {
+  display: none;
 }
 
-.flex-col {
-  flex-direction: column;
+.xs-show {
+  @media screen and (max-width: 820px) {
+    display: block;
+  }
 }
 
-.flex-auto {
-  flex: 1 1 auto;
-}
-
-.justify-content-center {
-  justify-content: center;
-}
-
-.align-items-center {
-  align-items: center;
-}
-
-.gap-12 {
-  gap: 12px;
-}
-
-.gap-16 {
-  gap: 16px;
-}
-
-.text-sm {
-  font-size: 0.75rem;
-}
-
-.text-lg {
-  font-size: 1.5rem;
-}
-
-.text-semibold {
-  font-weight: 500;
-}
-
-.text-bold {
-  font-weight: 700;
+.my-2 {
+  margin-top: 2px;
+  margin-bottom: 2px;
 }
